--- a/camel-kinesis2kafka/src/main/resources/application.properties
+++ b/camel-kinesis2kafka/src/main/resources/application.properties
@@ -1,14 +1,27 @@
-server.port=8080
-spring.application.name=fuse-configmap-booster
+spring.application.name=camel-kinesis2kafka
 
 # disable all management enpoints except health
 endpoints.enabled = false
 endpoints.health.enabled = true
 management.health.defaults.enabled=false
-
 camel.health.enabled=false
 camel.health.indicator.enabled=true
 
-booster.nameToGreet=default
+# Kinesis
+#camel.component.aws-kinesis.configuration.stream-name=<Source Data Stream>
+#camel.component.aws-kinesis.configuration.access-key=<AWS Access Key>
+#camel.component.aws-kinesis.configuration.secret-key=<AWS Secret Key>
+#camel.component.aws-kinesis.region=<Region>
+#camel.component.aws-kinesis.configuration.max-results-per-request=<Max Results Per Request>
 
-spring.cloud.kubernetes.reload.enabled=true
+# Kafka
+#topics=<Destination Topic>
+#camel.component.kafka.configuration.brokers=<Bootstrap Servers>
+#camel.component.kafka.configuration.security-protocol=<Security Protocol>
+#camel.component.kafka.configuration.ssl-truststore-location=<Truststore Location>
+#camel.component.kafka.configuration.ssl-truststore-password=<Truststore Password>
+#camel.component.kafka.configuration.sasl-mechanism=<SASL Mechanism>
+#camel.component.kafka.configuration.sasl-jaas-config=<JAAS Config>
+
+# Kafka Idempotent Repository
+#idempotent-topic=<Idempotent Topic>
