--- a/camel-paho2kafka/src/main/resources/application.properties
+++ b/camel-paho2kafka/src/main/resources/application.properties
@@ -3,7 +3,7 @@ camel.springboot.main-run-controller = true
 
 ## Required
 # camel.component.paho.topic=<MQTT Topic>
-# camel.component.paho.broker-url=<MQTT Broker URL>
+# camel.component.paho.serverURIs=<MQTT Broker URL>
 # camel.component.paho.qos=2 <MQTT Broker QOS, 2 = Exactly once>
 # camel.component.paho.userName=<MQTT Username>
 # camel.component.paho.password=<MQTT Password>
