Added private endpoint for Kinesis

--- a/camel-kinesis2kafka/src/main/resources/application.properties
+++ b/camel-kinesis2kafka/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-spring.application.name=camel-kinesis2kafka
+camel.springboot.main-run-controller = true
 
-# disable all management enpoints except health
-endpoints.enabled = false
-endpoints.health.enabled = true
-management.health.defaults.enabled=false
-camel.health.enabled=false
-camel.health.indicator.enabled=true
+#spring.application.name=camel-kinesis2kafka
 
 # Kinesis
 #camel.component.aws-kinesis.configuration.stream-name=<Source Data Stream>
@@ -13,6 +8,7 @@ camel.health.indicator.enabled=true
 #camel.component.aws-kinesis.configuration.secret-key=<AWS Secret Key>
 #camel.component.aws-kinesis.region=<Region>
 #camel.component.aws-kinesis.configuration.max-results-per-request=<Max Results Per Request>
+#endpoint=
 
 # Kafka
 #topics=<Destination Topic>
